fix: corrige imports errados e inconsistencias diagrama vs codigo na develop
- PedidoJpaEntity: import StatusPedido de domain.valueobject (estava domain.entity)
- EntregaJpaEntity: import StatusEntrega de domain.valueobject (estava domain.entity)
- ClienteJpaEntity: tipoPerfil como @Enumerated(STRING) com TipoPerfil enum (era String)
- StatusPedido: estados alinhados ao diagrama de estado (Criado/Pago/EmPreparacao/Pronto/EmEntrega/Concluido/Avaliado/Cancelado)
- Pedido.java: status inicial corrigido de PENDENTE para CRIADO; atualizarStatus usa podeTransicionarPara()
- Sms.java: remove @Setter do Lombok (projeto nao usa Lombok — causa erro de compilacao)